tests/programs/a1/local/invalid/test_float.java
public class test_float {
  protected float x;
}